--- a/index.html
+++ b/index.html
@@ -28,18 +28,24 @@
             }
             #content {
                 text-align: center;
+                max-width: 900px;
+                margin: 0 auto;
             }
             .content-item {
                 display: none;
+                vertical-align: top;
                 background-color: #fff;
                 margin: 20px;
                 padding: 20px;
                 box-sizing: border-box;
                 border-radius: 10%;
-                max-width: 45%;
                 transition: visibility 2s linear 2s;
                 -webkit-transition: visibility 2s linear 2s;
-                
+            }
+            @media (min-width: 800px) {
+                .content-item {
+                    max-width: 45%;
+                }
             }
         </style>
     </head>
@@ -73,7 +79,7 @@
     
                 var target = e.target;
                 focused = target;
-                target.setZ(0);
+                target.setZ(1);
                 body.style.backgroundColor = target.style.backgroundColor;
                 showCategory(target.innerHTML);
             }
