--- a/old.html
+++ b/old.html
@@ -12,26 +12,31 @@
         <script src="js/bootstrap.min.js"></script>
     </head>
     <body>
-    	<div class="container">
-        <div id="title" class="jumbotron">
+    	<div class="jumbotron">
+        <div id="title" class="container">
         	<h1>Mitchell Gordon</h1>
         </div>
-        <ul id="menu">
-        {% for section in site.data.sections %}
-            <li id="{{ section.name }}">
-               {{ section.name }} 
-            </li>
-        {% endfor %}
-        </ul>
+        </div>
+        <div class="container">
+        <div class="page-header">
+        	<h2>About Me</h2>
+        </div>
+        <div class="well">
+        	<p>I write software and build things that need to be built. I believe in simplicity as a rule in design and in life. My hobbies include making music, skateboarding, and speaking Japanese.</p>
+			<p>I attend Vanderbilt University as an undergraduate and will earn a Computer Science degree by December of 2015. I may go on to pursue a PhD in Computer Science, but I have not decided on a specialization yet. I find computer security, artificial intelligence, brain-computer interaction, and quantum computing particularly intriguing.</p> 
+			<a href="res/resume.pdf">Download My Resume</a>
+        </div>
+        <div class="page-header">
+        	<h2>Portfolio</h2>
+        </div>
         <div id="content" class="row">
             {% for post in site.posts %}
-                <div class="content-item {{ post.category }} col-md-6" style="display: none" >
+                <div class="content-item {{ post.category }} col-md-6">
                     <h3>{{ post.title }} </h3>
                     <span style="text-align: left;">{{ post.content }} </span>
                 </div>
             {% endfor %}
         </div>
         </div>
-        <script src="js/menu.js"></script>
     </body>
 </html>
