Something simple for now

--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
+---
+---
+<!doctype html>
 <html>
-<body>
-<div style="text-align:center">
-<h1>Under Construction</h1>
-<a href="old.html">Continue Anyways</a>
-</br>
-</div>
-</body>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="utf-8">
+		<link href='http://fonts.googleapis.com/css?family=Amatic+SC|Press+Start+2P' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="css/index.css">
+    </head>
+    <body>
+    	<div>
+        	<h1>Mitchell Gordon</h1></br>
+        	<a href="http://github.com/mitchellgordon95"><img src="img/github.png"/></a>
+        </div>
+    </body>
 </html>
