Added a tag line

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <body>
     	<div>
         	<h1>Mitchell Gordon</h1></br>
+        	<h3>Vanderbilt CS 2016</h3></br>
         	<a href="http://github.com/mitchellgordon95"><span class="octicon octicon-mark-github"></span></a>
         	<a href="/res/resume.pdf"><span class='octicon octicon-file-text'></span></a>
         	<a href="mailto:mitchell.gordon95@gmail.com"><span class='octicon octicon-mail'></span></a>
