Added infinite scroll

--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
         <link href="bower_components/octicons/octicons/octicons.css" rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/index.css">
+		<script src="bower_components/jquery/dist/jquery.min.js"></script>
+		<script src="bower_components/jquery-mousewheel/jquery.mousewheel.min.js"></script>
     </head>
     <body>
-    	<div>
+    	<div id="content">
         	<h1>Mitchell Gordon</h1></br>
         	<h3>Vanderbilt CS 2016</h3></br>
         	<a href="http://github.com/mitchellgordon95"><span class="octicon octicon-mark-github"></span></a>
         	<a href="/res/resume.pdf"><span class='octicon octicon-file-text'></span></a>
         	<a href="mailto:mitchell.gordon95@gmail.com"><span class='octicon octicon-mail'></span></a>
         </div>
+        <script src="js/scroll.js"></script>
     </body>
 </html>
