Added triangle hint

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         	<a href="/res/resume.pdf"><span class='octicon octicon-file-text'></span></a>
         	<a href="mailto:mitchell.gordon95@gmail.com"><span class='octicon octicon-mail'></span></a>
         </div>
+		<span class="octicon octicon-triangle-down" id="triangle-hint"></span>
         <script src="js/scroll.js"></script>
     </body>
 </html>
