Fixed align on mobile

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!doctype html>
 <html>
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=320, initial-scale=1">
         <meta charset="utf-8">
         <link href="bower_components/octicons/octicons/octicons.css" rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
