Added About/Portfolio options

--- a/index.html
+++ b/index.html
@@ -13,13 +13,23 @@
     </head>
     <body>
     	<div id="content">
-        	<h1>Mitchell Gordon</h1></br>
-        	<h3>Vanderbilt CS 2016</h3></br>
-        	<a href="http://github.com/mitchellgordon95"><span class="octicon octicon-mark-github"></span></a>
-        	<a href="/res/resume.pdf"><span class='octicon octicon-file-text'></span></a>
-        	<a href="mailto:mitchell.gordon95@gmail.com"><span class='octicon octicon-mail'></span></a>
+    		<div>
+	        	<h1 id="title">Mitchell Gordon</h1>
+	        	<h3 id="tagline">Vanderbilt CS 2016</h3>
+	        	<a href="http://github.com/mitchellgordon95"><span class="octicon octicon-mark-github"></span></a>
+	        	<a href="/res/resume.pdf"><span class='octicon octicon-file-text'></span></a>
+	        	<a href="mailto:mitchell.gordon95@gmail.com"><span class='octicon octicon-mail'></span></a>
+	        </div>
+	        <div id="about-arrow">
+	        	<h3>About</h3>
+	        	<span class="octicon octicon-arrow-left"></span>
+	        </div>
+	        <div id="portfolio-arrow">
+	        	<h3>Portfolio</h3>
+	        	<span class="octicon octicon-arrow-right"></span>
+	        </div>
         </div>
 		<span class="octicon octicon-triangle-down" id="triangle-hint"></span>
-        <script src="js/scroll.js"></script>
+        <script src="js/scroller.js"></script>
     </body>
 </html>
