--- a/index.html
+++ b/index.html
@@ -13,23 +13,31 @@
     </head>
     <body>
     	<div id="content">
-    		<div>
+    		<div id="main-section">
 	        	<h1 id="title">Mitchell Gordon</h1>
 	        	<h3 id="tagline">Vanderbilt CS 2016</h3>
 	        	<a href="http://github.com/mitchellgordon95"><span class="octicon octicon-mark-github"></span></a>
 	        	<a href="/res/resume.pdf"><span class='octicon octicon-file-text'></span></a>
 	        	<a href="mailto:mitchell.gordon95@gmail.com"><span class='octicon octicon-mail'></span></a>
 	        </div>
-	        <div id="about-arrow">
+	        <div id="menu-left">
 	        	<h3>About</h3>
 	        	<span class="octicon octicon-arrow-left"></span>
 	        </div>
-	        <div id="portfolio-arrow">
+	        <div id="menu-right">
 	        	<h3>Portfolio</h3>
 	        	<span class="octicon octicon-arrow-right"></span>
 	        </div>
+	    	<div id="about-section">
+	    			Some pictures of me
+	    			<p>Some text about me.</p>
+	    	</div>
+	    	<div id="portfolio-section">
+				<p>Some stuff I've done</p>
+	    	</div>
         </div>
 		<span class="octicon octicon-triangle-down" id="triangle-hint"></span>
         <script src="js/scroller.js"></script>
+        <script src="js/sections.js"></script>
     </body>
 </html>
