Adding some About content/styling

--- a/index.html
+++ b/index.html
@@ -37,8 +37,15 @@
 	               <img src="img/vandyhacks-team.jpg" />
 				</div>
 				<h3>About Me</h3>
-	    		<p>Some random text about me. A;lkdjf a;dlkfj ad;lkfj da;lkfj a;dlkfj dsalkfj;sadkfjdslkfj ;dlkfj ;salkdjf a;lkdsjf ;dsalkjfad;lkfj
-	    		a;dskjf ;lkdsajf ;alkdjf ;aldskjf lkdsajf;adslkjf;adskfj ;dsajf;dsalkf ;lkdsfj ;alkdjf ;dsalkjf a;dslkjf;dsalkjfads;kf jds;flkj saf</p>
+	    		<p>Hey there, I'm Mitchell. Here's some facts:</p>
+    			<ul>
+    			<li>I'm an undergraduate student at Vanderbilt University studying computer science. </li>
+    			<li>My favorite color is ironically a deep, forest green.</li>
+    			<li>I was born in Ohio, but I've lived in the Nashville area for way too long. </li>
+    			<li>I like to longboard but I'm not a skater. I write songs occasionally, but I wouldn't 
+    			call myself a songwriter. </li>
+    			<li>I speak some Japanese, mainly because I secretly love anime.</li>
+    			</ul>
 	    	</div>
 	    	<div id="portfolio-section">
 	    		{% for post in site.posts %}
