Updating about section

--- a/index.html
+++ b/index.html
@@ -38,13 +38,12 @@
     		<p>Hey there, I'm Mitchell. Here's some tidbits:</p>
    			<ul>
    			<li>I'm an undergraduate student at Vanderbilt University studying computer science. </li>
-   			<li>My favorite color is ironically a deep, forest green.</li>
+   			<li>My favorite color is a deep, forest green.</li>
    			<li>I was born in Ohio, but I've lived in the Nashville area for way too long. </li>
-   			<li>I like to longboard but I'm not a skater. I write songs occasionally, but I wouldn't 
-   			call myself a songwriter. </li>
+   			<li>I like to longboard around campus and I write songs occasionally. </li>
    			<li>I speak some Japanese, mainly because I secretly love anime.</li>
    			</ul>
-   			<p>I have too much experience in Android/Java, so I'm trying to branch out. I'm mostly looking at computer graphics
+   			<p>Most of my experience is in Android/Java, but I'm trying to branch out. I'm mostly looking at computer graphics
    			 and artificial intelligence, but I don't think I've found my passion yet.</p>
     	</div>
     	<div id="portfolio-section">
