Updated about section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    			<li>I like to longboard around campus and I write songs occasionally. </li>
    			<li>I speak some Japanese, mainly because I secretly love anime.</li>
    			</ul>
-   			<p>Most of my experience is in Android/Java, but I'm trying to branch out. I'm mostly looking at computer graphics
+   			<p>My experience is mostly in Android/Java, but I'm trying to branch out. I'm currently experimenting with computer graphics
    			 and artificial intelligence, but I don't think I've found my passion yet.</p>
     	</div>
     	<div id="portfolio-section">
