--- a/index.html
+++ b/index.html
@@ -49,8 +49,16 @@
     	<div id="portfolio-section">
     		<h1>My Work</h1>
     		{% for post in site.posts %}
-    		<h3>{{ post.title }}</h3>
-    		<p>{{ post.content }}</p>
+	    		<h3>
+	    		{{ post.title }}
+	    		{% if post.github %}			
+        			<a href="{{ post.github }}"><span class="octicon octicon-mark-github"></span></a>
+        		{% endif %}
+	    		</h3>
+	    		{% if post.image %}
+	    			<img src="{{ post.image }}"/>
+	    		{% endif %}
+	    		<p>{{ post.content }}</p>
     		{% endfor %}
     	</div>
     	<span class="octicon octicon-triangle-down" id="triangle-hint"></span>
