--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         		{% endif %}
 	    		</h3>
 	    		{% if post.image %}
-	    			<img src="{{ post.image }}"/>
+	    			<a href="{{ post.image }}"> <img src="{{ post.image }}"/> </a>
 	    		{% endif %}
 	    		{{ post.content }}
     		{% endfor %}
