Added themes. User can switch themes by clicking on the title. Standard theme still unimplemented.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta charset="utf-8">
         <link href="bower_components/octicons/octicons/octicons.css" rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/index.css">
+		<link rel="stylesheet" id="theme" href="css/standard_theme.css">
 		<script src="bower_components/jquery/dist/jquery.min.js"></script>
 		<script src="bower_components/jquery-mousewheel/jquery.mousewheel.min.js"></script>
     </head>
@@ -66,6 +67,7 @@
         <script src="js/scroller.js"></script>
         <script src="js/sections.js"></script>
         <script src="js/slider.js"></script>
+        <script src="js/theme.js"></script>
         
     </body>
 </html>
