Adding a few more profile pictures

--- a/index.html
+++ b/index.html
@@ -31,10 +31,14 @@
 			<h1>About Me</h1>
     		<div id="prof-pics">
                <img src="img/just-me.jpg" />
-               <img src="img/holi.jpg" />
                <img src="img/professional.jpg" />
-               <img src="img/vandyhacks-talk.jpg" />
+               <img src="img/spicy.jpg"/>
                <img src="img/vandyhacks-team.jpg" />
+               <img src="img/horses.jpg"/>
+               <img src="img/vandyhacks-talk.jpg" />
+               <img src="img/epic_mountain.jpg"/>
+               <img src="img/smirk.jpg" />
+               <img src="img/holi.jpg" />
 			</div>
     		<p>Hey there, I'm Mitchell. Here's some tidbits:</p>
    			<ul>
