The End => To Be Continued

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     			<li>"So, how did it go?"</li>
     			<li>"I'm in."</li>
             </ul>
-            <p>The End</p>
+            <p>To be continued...</p>
     		</div>
     	</div>
     	<div id="portfolio-section">
