--- a/vans/index.html
+++ b/vans/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Van Route Planner</h1>
+        <h1>Van Route Planner <span style="font-size: 0.6em;">v1.4.4</span></h1>
         
         <section id="depot-section">
             <h2>Starting Location (Depot)</h2>
