--- a/vans/index.html
+++ b/vans/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Van Route Planner <span style="font-size: 0.6em;">v1.4.4</span></h1>
+        <h1>Van Route Planner <span style="font-size: 0.6em;">v1.4.5</span></h1>
         
         <section id="depot-section">
             <h2>Starting Location (Depot)</h2>
@@ -51,6 +51,6 @@
             </div>
         </div>
     </div>
-    <script src="app.js"></script>
+    <script src="app.js?v=1.4.5"></script>
 </body>
 </html>
